--- a/FoodDeliveryApp/appsettings.json
+++ b/FoodDeliveryApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Connection": "Server=localhost;Port=5432;Database=Food_Delivery_DB;Username=postgres;Password=Rajeev@123;"
+    "Connection": "Server=localhost;Port=5432;Database=Food_Delivery_DB;Username=postgres;Password=irfan123;"
   },
   "AllowedHosts": "*"
 }
